--- a/video/templates/dashboard/auth/admin.html
+++ b/video/templates/dashboard/auth/admin.html
@@ -2,6 +2,12 @@
 <%! from django.shortcuts import reverse %>
 <%def name="content()">
 
+<style>
+.pagination {
+    margin-left: 500px;
+}
+</style>
+
 <%
     prev_page = '{}?page={}'.format(reverse('admin_manger'), page_num - 1)
     next_page = '{}?page={}'.format(reverse('admin_manger'), page_num + 1)
@@ -34,11 +40,14 @@
     % endfor
     </tbody>
 </table>
-% if page_num > 1:
-<a href="${prev_page}">上一页</a>
-% endif
-% if page_num < total:
-<a href="${next_page}">下一页</a>
-% endif
+
+<div class="pagination">
+    % if page_num > 1:
+    <a href="${prev_page}">上一页</a>
+    % endif
+    % if page_num < total:
+    <a href="${next_page}">下一页</a>
+    % endif
+</div>
 
 </%def>
