--- a/video/templates/dashboard/video/external_video.html
+++ b/video/templates/dashboard/video/external_video.html
@@ -6,7 +6,7 @@
 %>
 
     <h1>外链视频</h1>
-    <button class="btn btn-info open-btn" id="open-add-video-btn">创建</button>
+    <button class="btn btn-info open-btn" id="open-add-video-btn">创建</button><span>${error}</span>  <!-- span标签，没有值时为空 -->
     <form id="video-edit-area" class="form-horizontal edit-area add-video-area" action="" method="POST">${csrf_token}
         <div class="form-group">
             <div class="col-sm-10">
@@ -57,6 +57,40 @@
         </div>
         <button type="submit" class="btn btn-info">添加</button>
     </form>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>名称</th>
+            <th>海报</th>
+            <th>视频类型</th>
+            <th>视频来源</th>
+            <th>国籍</th>
+            <th>描述</th>
+            <th>状态</th>
+            <th>创建时间</th>
+            <th>修改时间</th>
+            <th>操作</th>
+        </tr>
+    </thead>
+    <tbody>
+    % for video in videos:
+    <tr>
+        <td>${video.name}</td>
+        <td><img class="video-images" src="${video.image}" /></td>
+        <td>${VideoType(video.video_type).label}</td>
+        <td>${FromType(video.from_to).label}</td>
+        <td>${NationalityType(video.nationality).label}</td>
+        <td><p class="info">${video.info}</p></td>
+        <td>${video.status}</td>
+        <td>${video.created_time}</td>
+        <td>${video.updated_time}</td>
+        <td><a href="">编辑</a>|<a href="">附属信息</a></td>
+    </tr>
+    % endfor
+    </tbody>
+</table>
+
 </%def>
 
 <%def name="css()">
