--- a/video/templates/dashboard/video/video_sub.html
+++ b/video/templates/dashboard/video/video_sub.html
@@ -7,13 +7,21 @@ from app.model.video import IdentityType
 
 <h1>${video.name}</h1>
 
-<h2>集数</h2>
+<h2>集数<span>${error}</span></h2>
+
+<form class="form-horizontal edit-area add-video-area add-url" method="POST">${csrf_token}
+    <p>地址与选集编辑区域</p>
+    <label>地址</label><input type="text" name="url" class="form-control"/><br />
+    <label>集数</label><input type="number" name="number" class="form-control"/><br />
+    <input type="submit" value="添加" class="btn btn-info" id="add-url-btn"/>
+</form>
+
 <table class="table">
     <thead>
     <tr>
         <th>集数</th>
         <th>地址</th>
-        <th>查看</th>
+        <th>控制</th>
     </tr>
     </thead>
     <tbody>
@@ -21,7 +29,11 @@ from app.model.video import IdentityType
         <tr>
             <td>第${video_sub.number}集</td>
             <td><p class="info">${video_sub.url}</p></td>
-            <td><a href="${video_sub.url}">查看</a></td>
+            <td>
+                <a class="btn btn-default" href="${video_sub.url}">查看</a>
+                <button class="btn btn-default">编辑</button>
+                <a class="btn btn-default" href="">删除</a>
+            </td>
         </tr>
         % endfor
     </tbody>
@@ -34,20 +46,16 @@ from app.model.video import IdentityType
     %endfor
 </ul>
 
-<form class="form-horizontal edit-area add-video-area add-url" method="POST">${csrf_token}
-    <label>地址</label><input type="text" name="url" class="form-control"/>
-    <input type="submit" value="添加" class="btn btn-info" id="add-url-btn"/>
-</form>
-
 <form class="form-horizontal edit-area add-video-area add-url" action="${reverse('video_star')}" method="POST">${csrf_token}
-    <label>演员</label><input type="text" name="name" class="form-control"/>
+    <p>演员与身份编辑区域</p>
+    <label>演员</label><input type="text" name="name" class="form-control"/><br />
     <label>身份</label>
     <select class="form-control" name="identity">
         %for identity in IdentityType:
         <option value="${identity.value}">${identity.label}</option>
         %endfor
     </select>
-    <input type="hidden" value="${video.id}" name="video_id" />
+    <input type="hidden" value="${video.id}" name="video_id" /><br />
     <input type="submit" value="添加" class="btn btn-info" id="add-star-btn"/>
 </form>
 
