--- a/video/templates/dashboard/video/video_sub.html
+++ b/video/templates/dashboard/video/video_sub.html
@@ -7,14 +7,28 @@ from app.model.video import IdentityType
 
 <h1>${video.name}</h1>
 
-<h2>集数<span>${error}</span></h2>
+<form class="form-horizontal edit-area add-video-area add-url" action="${reverse('video_star')}" method="POST">${csrf_token}
+    <p>演员与身份编辑区域</p>
+    <label>演员</label><input type="text" name="name" class="form-control"/><br />
+    <label>身份</label>
+    <select class="form-control" name="identity">
+        %for identity in IdentityType:
+        <option value="${identity.value}">${identity.label}</option>
+        %endfor
+    </select>
+    <input type="hidden" value="${video.id}" name="video_id" /><br />
+    <input type="submit" value="添加" class="btn btn-info" id="add-star-btn"/>
+</form>
 
 <form class="form-horizontal edit-area add-video-area add-url" method="POST">${csrf_token}
     <p>地址与选集编辑区域</p>
-    <label>地址</label><input type="text" name="url" class="form-control"/><br />
-    <label>集数</label><input type="number" name="number" class="form-control"/><br />
+    <label>地址</label><input id="url" type="text" name="url" class="form-control"/><br />
+    <label>集数</label><input id="number" type="number" name="number" class="form-control"/><br />
+    <input type="hidden" value="" name="videosub_id" id="videosub-input-id" />
     <input type="submit" value="添加" class="btn btn-info" id="add-url-btn"/>
 </form>
+
+<h2>集数<span>${error}</span></h2>
 
 <table class="table">
     <thead>
@@ -31,8 +45,8 @@ from app.model.video import IdentityType
             <td><p class="info">${video_sub.url}</p></td>
             <td>
                 <a class="btn btn-default" href="${video_sub.url}">查看</a>
-                <button class="btn btn-default">编辑</button>
-                <a class="btn btn-default" href="">删除</a>
+                <button class="btn btn-default update-btn" data-id="${video_sub.id}" data-url="${video_sub.url}" data-number="${video_sub.number}">编辑</button>
+                <a class="btn btn-default" href="${reverse('sub_delete', kwargs={'videosub_id': video_sub.id, 'video_id': video.id  })}">删除</a>
             </td>
         </tr>
         % endfor
@@ -46,21 +60,12 @@ from app.model.video import IdentityType
     %endfor
 </ul>
 
-<form class="form-horizontal edit-area add-video-area add-url" action="${reverse('video_star')}" method="POST">${csrf_token}
-    <p>演员与身份编辑区域</p>
-    <label>演员</label><input type="text" name="name" class="form-control"/><br />
-    <label>身份</label>
-    <select class="form-control" name="identity">
-        %for identity in IdentityType:
-        <option value="${identity.value}">${identity.label}</option>
-        %endfor
-    </select>
-    <input type="hidden" value="${video.id}" name="video_id" /><br />
-    <input type="submit" value="添加" class="btn btn-info" id="add-star-btn"/>
-</form>
-
 </%def>
 
 <%def name="css()">
     <link href="/static/dashboard/css/video_sub.css" rel="stylesheet" />
+</%def>
+
+<%def name="js()">
+    <script src="/static/dashboard/js/video_sub.js"></script>
 </%def>
