--- a/video/templates/dashboard/video/video_sub.html
+++ b/video/templates/dashboard/video/video_sub.html
@@ -1,7 +1,7 @@
 <%inherit file="../base.html" />
 <%!
 from django.shortcuts import reverse
-from app.model.video import IdentityType
+from app.model.video import IdentityType, FromType
 %>
 <%def name="content()">
 
@@ -20,9 +20,18 @@ from app.model.video import IdentityType
     <input type="submit" value="添加" class="btn btn-info" id="add-star-btn"/>
 </form>
 
+% if FromType(video.from_to) == FromType.custom:
+<form enctype="multipart/form-data" class="form-horizontal edit-area add-video-area add-url" method="POST">${csrf_token}
+% else:
 <form class="form-horizontal edit-area add-video-area add-url" method="POST">${csrf_token}
+% endif
+
     <p>地址与选集编辑区域</p>
-    <label>地址</label><input id="url" type="text" name="url" class="form-control"/><br />
+    % if FromType(video.from_to) != FromType.custom:
+        <label>地址</label><input id="url" type="text" name="url" class="form-control"/><br />
+    % else:
+        <label>地址</label><input id="url" type="file" name="url" class="form-control"/><br />
+    % endif
     <label>集数</label><input id="number" type="number" name="number" class="form-control"/><br />
     <input type="hidden" value="" name="videosub_id" id="videosub-input-id" />
     <input type="submit" value="添加" class="btn btn-info" id="add-url-btn"/>
@@ -55,9 +64,9 @@ from app.model.video import IdentityType
 
 <h2>演员(点击可删除)</h2>
 <ul>
-    %for video_star in video.video_star.all():
+    % for video_star in video.video_star.all():
     <li><a href="${reverse('star_delete', kwargs={'star_id': video_star.id, 'video_id': video.id})}">${video_star.name}:${IdentityType(video_star.identity).label}</a></li>
-    %endfor
+    % endfor
 </ul>
 
 </%def>
